<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home_rec"
        android:icon="@drawable/home_selector"
        android:title="@string/title_home"
        android:checked="true"/>

    <item
        android:id="@+id/navigation_search_rec"
        android:icon="@drawable/search_selector"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_jobs_rec"
        android:icon="@drawable/jobs_selector"
        android:title="@string/title_jobs"
        />

    <item
        android:id="@+id/navigation_dashboard_rec"
        android:icon="@drawable/dashboard_selector"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_setting_rec"
        android:icon="@drawable/settings_selector"
        android:title="@string/title_settings" />

</menu>