<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.project.tex.main.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.project.tex.main.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">
    </fragment>

    <fragment
        android:id="@+id/navigation_job"
        android:name="com.project.tex.main.ui.jobs.JobsFragment"
        android:label="@string/title_jobs"
        tools:layout="@layout/fragment_jobs">
    </fragment>

    <fragment
        android:id="@+id/navigation_avid"
        android:name="com.project.tex.main.ui.avid.AvidFragment"
        android:label="@string/title_avid"
        tools:layout="@layout/fragment_avid">
    </fragment>
</navigation>