<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_top_bg_white"
    android:clickable="true"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingTop="16dp"
    android:paddingBottom="40dp">

    <View
        android:id="@+id/lip"
        android:layout_width="80dp"
        android:layout_height="4dp"
        android:background="@color/lip_color"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/share_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gilroy_regular"
        android:lineSpacingExtra="8dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="@dimen/dp_12"
        android:text="@string/share"
        android:textColor="@color/text_main"
        android:textSize="@dimen/sp_16"
        android:drawablePadding="@dimen/dp_16"
        app:drawableStartCompat="@drawable/share" />

    <TextView
        android:id="@+id/link_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_regular"
        android:lineSpacingExtra="8dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="@dimen/dp_12"
        android:text="@string/link"
        android:textColor="@color/text_main"
        android:textSize="@dimen/sp_16"
        android:drawablePadding="@dimen/dp_16"
        app:drawableStartCompat="@drawable/link" />

    <TextView
        android:id="@+id/save_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_regular"
        android:lineSpacingExtra="8dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="@dimen/dp_12"
        android:text="@string/save"
        android:textColor="@color/text_main"
        android:textSize="@dimen/sp_16"
        android:drawablePadding="@dimen/dp_16"
        app:drawableStartCompat="@drawable/save" />

    <TextView
        android:id="@+id/info_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_regular"
        android:lineSpacingExtra="8dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="@dimen/dp_12"
        android:text="@string/why_you_are_seeing_this_post"
        android:textColor="@color/text_main"
        android:textSize="@dimen/sp_16"
        android:drawablePadding="@dimen/dp_16"
        app:drawableStartCompat="@drawable/info" />
    <TextView
        android:id="@+id/report_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_regular"
        android:lineSpacingExtra="8dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="@dimen/dp_12"
        android:text="@string/report"
        android:textColor="@color/report_red"
        android:textSize="@dimen/sp_16"
        android:drawablePadding="@dimen/dp_16"
        app:drawableStartCompat="@drawable/report" />

</androidx.appcompat.widget.LinearLayoutCompat>