<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".settings.ui.SettingsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingStart="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_8"
        app:layout_constraintTop_toTopOf="parent"
        app:logo="@null"
        app:navigationIcon="@drawable/ic_back_arrow"
        app:title="@string/title_settings"
        app:titleTextAppearance="@style/settingStyle" />

    <TextView
        android:id="@+id/app_notify_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:drawablePadding="@dimen/dp_16"
        android:ellipsize="marquee"
        android:fontFamily="@font/gilroy_medium"
        android:gravity="center_vertical|start"
        android:maxLines="1"
        android:paddingVertical="@dimen/dp_18"
        android:text="@string/app_notifications"
        android:textColor="@color/text_main"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/main_toolbar" />

    <CheckedTextView
        android:id="@+id/pause_all_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:drawablePadding="@dimen/dp_16"
        android:ellipsize="marquee"
        android:fontFamily="@font/gilroy_regular"
        android:gravity="center_vertical|start"
        android:maxLines="1"
        android:drawableEnd="@drawable/switch_on_off"
        android:paddingVertical="@dimen/dp_6"
        android:text="@string/pause_all"
        android:textColor="@color/text_main"
        android:textSize="@dimen/sp_16"
        app:layout_constraintTop_toBottomOf="@id/app_notify_title" />

    <View
        android:id="@+id/separator"
        app:layout_constraintTop_toBottomOf="@id/pause_all_tv"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_24"
        android:background="@color/drawable_outline_grey"/>

    <TextView
        android:id="@+id/other_notify_types_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:drawablePadding="@dimen/dp_16"
        android:ellipsize="marquee"
        android:fontFamily="@font/gilroy_medium"
        android:gravity="center_vertical|start"
        android:maxLines="1"
        android:paddingVertical="@dimen/dp_18"
        android:text="@string/other_not_type"
        android:textColor="@color/text_main"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/separator" />

    <CheckedTextView
        android:id="@+id/email_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:drawablePadding="@dimen/dp_16"
        android:ellipsize="marquee"
        android:fontFamily="@font/gilroy_regular"
        android:gravity="center_vertical|start"
        android:maxLines="1"
        android:drawableEnd="@drawable/switch_on_off"
        android:paddingVertical="@dimen/dp_6"
        android:text="@string/email"
        android:textColor="@color/text_main"
        android:textSize="@dimen/sp_16"
        app:layout_constraintTop_toBottomOf="@id/other_notify_types_title" />

    <CheckedTextView
        android:id="@+id/sms_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:drawablePadding="@dimen/dp_16"
        android:ellipsize="marquee"
        android:fontFamily="@font/gilroy_regular"
        android:gravity="center_vertical|start"
        android:maxLines="1"
        android:drawableEnd="@drawable/switch_on_off"
        android:paddingVertical="@dimen/dp_6"
        android:text="@string/sms"
        android:textColor="@color/text_main"
        android:textSize="@dimen/sp_16"
        app:layout_constraintTop_toBottomOf="@id/email_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>